# lecture-testing-task

05_hw/: CMakeLists.txt  benchmark.c  cppcheck_report.txt  stack.c  test.c
